support spanner float32 type